--- a/index.html
+++ b/index.html
@@ -1,21 +1,91 @@
 <!DOCTYPE html>
-<html lang="nl">
-	
+<html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy FED2425</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>April Ford Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<h1>Howdy FED2425</h1>
+    <header>
 
-	<script defer src="scripts/script.js"></script>
+        <img src="images/april-ford-logo.svg" alt="April Ford in letters">
+        <nav>
+            <ul>
+                <li>ABOUT</li>
+                <li>SERVICES</li>
+                <li>SPECIALISATIONS</li>
+                <li>CASE STUDIES</li>
+                <li>INSIGHTS</li>
+                <li>CONTACT</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="homepagina-blauw">
+            <h1 class="verborgen-titel">Home</h1>
+            <h2 class="h2-introtekst">THE #1 DIGITAL MARKETING PERFORMANCE AGENCY</h2>
+            <h3 class="h3-introtekst">STOP SEARCHING<br>START GROWING.</h3>
+            <button>GET STARTED</button>
+        </section>
+
+        <article tekst-rechts>
+            <h3>Digital marketing AGENCY SPECIALIsING iNlead generation and ecommerce.</h3>
+            <p>Need more leads. Want to grow but don’t know how. Not getting the ROAS you once were or need a new
+                strategy. Sound familiar? You’re not alone. We work with CEOs, GMs, CMOs and Marketing Managers all over
+                Australia solving these exact problems with digital marketing solutions.
+                <br>
+                <br>
+                April Ford is a digital performance agency with an innate understanding of business. We manage a
+                national portfolio of clients with specialisations in medical and allied health, financial services,
+                professional services, lead generation, ecommerce, education, government, SAAS and FMCG.
+                <br>
+                <br>
+                Based in Brisbane CBD with a sister office on the Sunshine Coast Queensland, we’re in Melbourne, Sydney
+                and Canberra every other week visiting clients. Our teams are all in-house and always available. We’re
+                unconditionally focused on business growth.
+            </p>
+        </article>
+
+        <section class="tekst-rechts">
+            <img src="" alt="">
+            <h3>We take the <br>time to get <br> to know <span>you.</span></h3>
+            <p>We believe in getting to know you, your industry, and your problem, intimately. We’re obsessive about
+                detail and we know investing the time to understand you means better outcomes for all./p>
+        </section>
+
+        <section class="tekst-links">
+            <img src="" alt="">
+            <h3>The <span>complete</span> media stack.</h3>
+            <p>We believe in getting to know you, your industry, and your problem, intimately. We’re obsessive about
+                detail and we know investing the time to understand you means better outcomes for all./p>
+        </section>
+
+        <section class="tekst-rechts">
+            <img src="" alt="">
+            <h3>Performance <br><span>campaigns</span> that <br> cut through.</h3>
+            <p>We develop performance campaigns with creative that cuts through. Scroll stopping, mind bending,
+                brilliantly strategic, direct response campaigns that convert.</p>
+        </section>
+
+        <section>
+            <img src="" alt="">
+            <h3>Think bigger<br> <span>Execute faster.</span></h3>
+            <p>Big ideas are only as good as your ability to execute them. It's why at April Ford we invest in people
+                that deliver, not just talk. It’s why we’re all in house, working together to deliver world class
+                marketing.</p>
+        </section>
+
+        <h3>Specialise, Don't<br><span>generalise.</span></h3>
+        se
+    </main>
+
+    <footer>
+
+    </footer>
+    <script src="js/index.js"></script>
 </body>
-	
+
 </html>
