--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <section class="tekst-links">
             <img src="" alt="">
-            <h3>The <span>complete</span> media stack.</h3>
+            <h3>The <span>complete</span><br> media stack.</h3>
             <p>We believe in getting to know you, your industry, and your problem, intimately. We’re obsessive about
                 detail and we know investing the time to understand you means better outcomes for all./p>
         </section>
@@ -79,7 +79,7 @@
         </section>
 
         <h3>Specialise, Don't<br><span>generalise.</span></h3>
-        se
+        
     </main>
 
     <footer>
